--- a/templates/default/systemd/alertmanager.service.erb
+++ b/templates/default/systemd/alertmanager.service.erb
@@ -4,10 +4,10 @@ After=network.target
 
 [Service]
 ExecStart=<%= node['prometheus']['alertmanager']['binary'] %> \
-    -log.level=debug \
-    -storage.path=<%= node['prometheus']['alertmanager']['storage.path'] %> \
-    -config.file=<%=  node['prometheus']['alertmanager']['config.file'] %> \
-    -web.external-url=<%= node['prometheus']['flags']['alertmanager.url'] %>
+    --log.level=debug \
+    --storage.path=<%= node['prometheus']['alertmanager']['storage.path'] %> \
+    --config.file=<%=  node['prometheus']['alertmanager']['config.file'] %> \
+    --web.external-url=<%= node['prometheus']['flags']['alertmanager.url'] %>
 User=<%= node['prometheus']['user'] %>
 Group=<%= node['prometheus']['group'] %>
 Restart=always
